# ShiftTab

./: Cargo.toml  LICENSE  PKGBUILD  install.sh  readme.md  shifttab.zsh
src/: main.rs
